@@ -2,7 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-    <!-- mvn clean install package -->
+	<organization>
+		<name>moocss</name>
+		<url>http://moocss.com</url>
+	</organization>
 	<modules>
 		<module>eshop-commons</module>
 		<module>eshop-model</module>
@@ -15,8 +18,9 @@
 	<artifactId>eshopcms</artifactId>
 	<version>0.0.1</version>
 	<packaging>pom</packaging>
+
 	<name>eshopcms</name>
-	<url>http://moocss.com</url>
+	<url>http://eshopcms.moocss.com</url>
 
 	<!-- 开发人员信息 -->
 	<developers>
@@ -39,9 +43,11 @@
 		<mybatis.version>3.2.6</mybatis.version>
 		<mybatis.spring.version>1.2.2</mybatis.spring.version>
 		<mysql.version>5.1.32</mysql.version>
-		<jstl.version>1.2</jstl.version>
 		<logback.version>1.1.2</logback.version>
 		<jcloverslf4j.version>1.7.6</jcloverslf4j.version>
+		<webapp.port>8080</webapp.port>
+		<webapp.stopPort>9090</webapp.stopPort>
+		<webapp.path>/</webapp.path>
 	</properties>
 
 	<dependencyManagement>
@@ -49,20 +55,20 @@
 			<!-- servlet -->
 			<dependency>
 				<groupId>javax.servlet</groupId>
-				<artifactId>servlet-api</artifactId>
-				<version>2.5</version>
+				<artifactId>javax.servlet-api</artifactId>
+				<version>3.1.0</version>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>javax.servlet.jsp</groupId>
 				<artifactId>jsp-api</artifactId>
-				<version>2.1</version>
+				<version>2.2</version>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>javax.servlet</groupId>
 				<artifactId>jstl</artifactId>
-				<version>${jstl.version}</version>
+				<version>1.2</version>
 			</dependency>
 
 			<!-- module -->
@@ -179,27 +185,45 @@
 			<dependency>
 			  <groupId>junit</groupId>
 			  <artifactId>junit</artifactId>
-			  <version>4.10</version>
+			  <version>4.11</version>
 			</dependency>
-			
+
+	        <!-- FreeMarker -->
+			<dependency>
+				<groupId>org.freemarker</groupId>
+				<artifactId>freemarker</artifactId>
+				<version>2.3.20</version>
+			</dependency>
+
 			<!-- SiteMesh -->
 			<dependency>
 				<groupId>org.sitemesh</groupId>
 				<artifactId>sitemesh</artifactId>
 				<version>3.0.0</version>
 			</dependency>
+
+	        <!-- fileupload -->
+			<dependency>
+				<groupId>commons-fileupload</groupId>
+				<artifactId>commons-fileupload</artifactId>
+				<version>1.3</version>
+			</dependency>
 			
 		</dependencies>
 	</dependencyManagement>
 	<build>
+		<defaultGoal>compile</defaultGoal>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
+				<version>3.1</version>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
+					<meminitial>512m</meminitial>
+					<maxmem>1024m</maxmem>
+					<fork>true</fork>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -210,13 +234,58 @@
 					<skip>true</skip>
 				</configuration>
 			</plugin>
-			<!-- maven tomcat plugin usage mvn tomcat:run -->
-			<!--<plugin>
-				<groupId>org.apache.tomcat.maven</groupId>
-				<artifactId>tomcat6-maven-plugin</artifactId>
-				<version>2.0</version>
-			</plugin> -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.2.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>java</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<systemProperties>
+						<systemProperty>
+							<key>file.encoding</key>
+							<value>UTF-8</value>
+						</systemProperty>
+					</systemProperties>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<encoding>UTF-8</encoding>
+				</configuration>
+				<executions>
+					<execution>
+						<id>copy-resources</id>
+						<phase>process-resources</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<encoding>UTF-8</encoding>
+							<outputDirectory>${project.build.directory}/classes</outputDirectory>
+							<resources>
+								<resource>
+									<directory>.</directory>
+									<includes>
+										<include>db.properties</include>
+									</includes>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 
+
+			<!-- maven tomcat plugin usage mvn tomcat:run -->
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
@@ -225,10 +294,95 @@
 
 			<!-- maven jetty plugin usage mvn jetty:run -->
 			<plugin>
-				<groupId>org.eclipse.jetty</groupId>
+				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
-				<version>9.0.0.v20130308</version>
+				<version>8.1.13.v20130916</version>
+				<configuration>
+					<webAppConfig>
+						<contextPath>${webapp.path}</contextPath>
+						<defaultsDescriptor>webdefault.xml</defaultsDescriptor>
+					</webAppConfig>
+					<connectors>
+						<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+							<port>${webapp.port}</port>
+							<maxIdleTime>60000</maxIdleTime>
+						</connector>
+					</connectors>
+					<reload>automatic</reload>
+					<scanIntervalSeconds>0</scanIntervalSeconds>
+					<!-- stopPort>${webapp.stopPort}</stopPort -->
+					<systemProperties>
+						<systemProperty>
+							<name>org.mortbay.util.URI.charset</name>
+							<value>UTF-8</value>
+						</systemProperty>
+					</systemProperties>
+					<jvmArgs>-Xmx512m -XX:PermSize=128m -XX:MaxPermSize=256m
+						-Dfile.encoding=UTF-8</jvmArgs>
+				</configuration>
+				<executions>
+					<execution>
+						<id>start-jetty</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<scanIntervalSeconds>0</scanIntervalSeconds>
+							<daemon>true</daemon>
+						</configuration>
+					</execution>
+					<execution>
+						<id>stop-jetty</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>stop</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.7</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<configuration>
+							<target>
+								<tstamp prefix="eshopcms.">
+									<format property="time" pattern="yyyyMMddHHmmss" />
+								</tstamp>
+								<copy todir="${basedir}/dist" overwrite="true">
+									<fileset
+										dir="${basedir}/target/${project.artifactId}-${project.version}" />
+								</copy>
+								<replace file="${basedir}/dist/WEB-INF/web.xml" token="eshopcms.root"
+									value="eshopcms.root.${eshopcms.time}" />
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<directory>src/main/java</directory>
+				<includes>
+					<include>**/*.xml</include>
+					<include>**/*.properties</include>
+				</includes>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<includes>
+					<include>**/*.xml</include>
+					<include>**/*.properties</include>
+				</includes>
+			</resource>
+		</resources>
 	</build>
 </project>
